<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">1414231085481831</string>
    <string name="app_name">Relaxis</string>
    <string name="action_settings">Settings</string>
    <string name="email_login">Sign up with email</string>
    <string name="acc_register">I have an account</string>
    <string name="heart_rate">Heart rate</string>
    <string name="button">Click me!</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="statusMessage">Status message</string>

</resources>
