<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <fragment
        android:name="com.relaxisapp.relaxis.LoginFragment"
        android:id="@+id/frag_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tv_heartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_rate" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="clickMe" />

    <Button
        android:id="@+id/ButtonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonConnect" />
    
    <Button
        android:id="@+id/ButtonDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDisconnect" />

    <EditText
        android:id="@+id/labelHeartRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>
    
    <EditText
        android:id="@+id/labelInstantSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/labelStatusMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statusMessage" />

</LinearLayout>
